# gnumeric-py

./: .gitignore  .pre-commit-config.yaml  README.md  hatch_build.py  load_to_cells.py  manual_tests.py  pyproject.toml  requirements.txt  setup.py  unit_tests.py
gnumeric/: .constants.json  __init__.py  cell.py  evaluation_errors.py  exceptions.py  expression.py  expression_evaluation.py  sheet.py  utils.py  workbook.py
gnumeric/formula_functions/: argument_helpers.py  mathematics.py  statistics.py
parsing/: calc.py  excel-lalr.py  excel.py
samples/: sheet-names.gnumeric  sheet-names.xml  test.gnumeric
src/: cell.py  exceptions.py  expression.py  gnumeric.py  sheet.py  utils.py  workbook.py
tests/: cell.py  expression_evaluation.py  sheet.py  test_cell.py  test_expression.py  test_expression_evaluation.py  test_sheet.py  test_utils.py  test_workbook.py  workbook.py
