[tool.poetry]
name = "gnumeric"
version = "0.1.0"
description = "A python library for reading and writing Gnumeric files"
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
python-dateutil = "^2.9.0.post0"
lark-parser = "^0.12.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
